@@ -1,3 +1,2 @@
--e git+https://github.com/Pylons/deform.git#egg=deform
--e git+https://github.com/Pylons/colander.git#egg=colander
+-e git+https://github.com/Pylons/deform.git@master#egg=deform
 -e ".[testing]"
